[package]
name = "eugene-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros", "webhooks-axum", "rustls"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
openssl = { version = "0.10", features = ["vendored"] }
aria2-api = { git = "ssh://git@github.com/jdxj/aria2-api.git", branch = "dev" }
